--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 }
 .org-tree {
 	width: 70%;
+	overflow-x: scroll;
 }
 .employee-list-container {
 	width: 30%;
@@ -87,6 +88,8 @@
 .org-tree ul {
 	padding-top: 20px;
 	position: relative;
+	display: flex;
+	flex-direction: column;
 	transition: all 0.5s;
 }
 
@@ -99,95 +102,40 @@
 	transition: all 0.5s;
 }
 
-/*We will use ::before and ::after to draw the connectors*/
+.node-container {
+	display: flex;
+	flex-direction: column;
+}
+.node {
+	display: flex;
 
-.org-tree li::before,
-.org-tree li::after {
-	content: "";
-	position: absolute;
-	top: 0;
-	right: 50%;
-	border-top: 1px solid #ccc;
-	width: 50%;
-	height: 20px;
+	margin: 5px auto;
 }
-.org-tree li::after {
-	right: auto;
-	left: 50%;
-	border-left: 1px solid #ccc;
-}
-
-.org-tree li:only-child::after,
-.org-tree li:only-child::before {
-	display: none;
-}
-
-.org-tree li:only-child {
-	padding-top: 0;
-}
-
-.org-tree li:first-child::before,
-.org-tree li:last-child::after {
-	border: 0 none;
-}
-
-.org-tree li:last-child::before {
-	border-right: 1px solid #ccc;
-	border-radius: 0 5px 0 0;
-	-webkit-border-radius: 0 5px 0 0;
-	-moz-border-radius: 0 5px 0 0;
-}
-.org-tree li:first-child::after {
-	border-radius: 5px 0 0 0;
-	-webkit-border-radius: 5px 0 0 0;
-	-moz-border-radius: 5px 0 0 0;
-}
-
-.org-tree ul ul::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 50%;
-	border-left: 1px solid #ccc;
-	width: 0;
-	height: 20px;
-}
-
-.org-tree li a {
-	border: 1px solid #ccc;
+.node-item {
+	margin: 5px;
+	box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
 	padding: 5px 10px;
-	text-decoration: none;
-	color: #666;
-	font-family: arial, verdana, tahoma;
-	font-size: 11px;
-	display: inline-block;
-
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
 }
-
-.org-tree li a:hover,
-.org-tree li a:hover + ul li a {
-	background: #c8e4f8;
+.node-item > h3 {
+	font-weight: 600;
+	margin: 5px auto;
+	line-height: 20px;
+}
+.team-btn {
 	color: #000;
-	border: 1px solid #94a0b4;
+	border: none;
+	padding: 5px 10px;
+	margin: 5px;
+	font: 40 15px sans-serif;
 }
-
-.org-tree li a:hover + ul li::after,
-.org-tree li a:hover + ul li::before,
-.org-tree li a:hover + ul::before,
-.org-tree li a:hover + ul ul::before {
-	border-color: #94a0b4;
+#children {
+	display: flex;
 }
-
 .card {
 	position: relative;
 	display: flex;
+	width: 400px;
+	margin: 0px auto;
 	flex-direction: column;
 	justify-content: center;
 	box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
@@ -202,11 +150,10 @@
 	margin: 10px auto;
 	z-index: 100;
 }
-.card .image img {
-	border-radius: 50%;
+.card .image img,
+.node > .node-item > img {
 	width: 60px;
 	height: 60px;
-	border: 13px solid #96f6b7;
 }
 .card .card-body {
 	background: #fff;
