--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,18 @@
 	flex-wrap: nowrap;
 }
 .org-tree {
-	width: 70%;
-	overflow-x: scroll;
+	width: 60%;
+	margin: 10px;
+}
+body {
+	font-family: sans-serif;
 }
 .employee-list-container {
 	width: 30%;
 	height: 100%;
 }
-.employee-list {
+.employee-list,
+ul {
 	height: 100%;
 	padding-inline-start: 10px;
 	display: flex;
@@ -88,13 +92,12 @@
 .org-tree ul {
 	padding-top: 20px;
 	position: relative;
-	display: flex;
-	flex-direction: column;
 	transition: all 0.5s;
 }
 
 .org-tree li {
 	float: left;
+	padding-inline-start: 20px;
 	text-align: center;
 	list-style-type: none;
 	position: relative;
@@ -128,18 +131,15 @@
 	margin: 5px;
 	font: 40 15px sans-serif;
 }
+
 #children {
 	display: flex;
 }
 .card {
 	position: relative;
-	display: flex;
-	width: 400px;
-	margin: 0px auto;
-	flex-direction: column;
-	justify-content: center;
 	box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
-	/* width: 300px; */
+	width: 400px;
+	margin: 10px auto;
 }
 
 .card .image {
@@ -209,5 +209,12 @@
 	.employee-list-container {
 		width: 100%;
 		height: 100%;
+	}
+	.card {
+		width: 90%;
+	}
+	.node {
+		overflow-x: scroll;
+		width: 100%;
 	}
 }
