Tree search functionality added

--- a/src/App.css
+++ b/src/App.css
@@ -105,20 +105,6 @@ ul {
 	transition: all 0.5s;
 }
 
-.node {
-	display: flex;
-	margin: 5px auto;
-}
-.node-item {
-	margin: 5px;
-	box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
-	padding: 5px 10px;
-}
-.node-item > h3 {
-	font-weight: 600;
-	margin: 5px auto;
-	line-height: 20px;
-}
 .team-btn {
 	color: #000;
 	border: none;
@@ -134,7 +120,10 @@ ul {
 span {
 	margin: 5px;
 }
-.card {
+div > span {
+	position: relative;
+}
+div > span > .card {
 	position: relative;
 	box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
 	width: 400px;
@@ -204,6 +193,7 @@ span {
 	}
 	.org-tree {
 		width: 100%;
+		margin: 0px;
 	}
 	.employee-list-container {
 		width: 100%;
@@ -215,5 +205,8 @@ span {
 	.node {
 		overflow-x: scroll;
 		width: 100%;
+	}
+	div > span > .card {
+		width: 90%;
 	}
 }
