--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,17 @@
 	flex-wrap: nowrap;
 }
 .org-tree {
-	width: 60%;
+	width: calc(100vw - 30vw);
 	margin: 10px;
 }
 body {
 	font-family: sans-serif;
 }
 .employee-list-container {
-	width: 30%;
+	width: 30vw;
 	height: 100%;
 }
-.employee-list,
-ul {
+.employee-list {
 	height: 100%;
 	padding-inline-start: 10px;
 	display: flex;
@@ -89,21 +88,6 @@ ul {
 	border-radius: 5px;
 	color: #000;
 }
-.org-tree ul {
-	padding-top: 20px;
-	position: relative;
-	transition: all 0.5s;
-}
-
-.org-tree li {
-	float: left;
-	padding-inline-start: 20px;
-	text-align: center;
-	list-style-type: none;
-	position: relative;
-	padding: 20px 5px 0 5px;
-	transition: all 0.5s;
-}
 
 .team-btn {
 	color: #000;
@@ -113,77 +97,42 @@ ul {
 	font: 40 15px sans-serif;
 }
 
-.child {
-	display: flex !important;
-	overflow-x: auto;
+.characters {
+	list-style: none;
+	padding-left: 0;
 }
-span {
-	margin: 5px;
-}
-div > span {
-	position: relative;
-}
-div > span > .card {
-	position: relative;
-	box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
+
+.characters li {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
 	width: 400px;
+	border: solid 2px #d0d0d0;
+	border-radius: 0.2em;
+	padding: 0.5em 0.8em 0.5em 0.5em;
 	margin: 10px auto;
 }
 
-.card .image {
-	border-radius: 50%;
-	width: 80px;
-	min-height: 80px;
-	display: block;
-	margin: 10px auto;
-	z-index: 100;
-}
-.card .image img,
-.node > .node-item > img {
-	width: 60px;
-	height: 60px;
-}
-.card .card-body {
-	background: #fff;
-	min-height: 56px;
-	text-align: center;
-	width: 300px;
-	border-radius: 16px;
-	border-bottom-left-radius: 0;
-	border-bottom-right-radius: 0;
-	position: relative;
-	z-index: -1;
-	left: 50%;
-	transform: translateX(-50%);
-}
-
-.card .card-body h4 {
-	font-weight: 600;
-	margin: 5px auto;
-	line-height: 20px;
-}
-.card .card-body p {
-	line-height: 20px;
-	margin: 5px auto;
-	font-size: small;
-}
-.card .card-footer {
-	padding: 3px;
-	background: #96f6b7;
-	text-align: center;
-	bottom: 0;
-	position: relative;
-	width: 295px;
-	border-radius: 16px;
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
-	z-index: -1;
-	left: 50%;
-	transform: translateX(-50%);
-}
-.card .card-footer img {
-	width: 25px;
+.characters p {
+	max-width: none;
+	font-weight: bold;
 	margin: 5px;
+}
+
+.characters-thumb {
+	overflow: hidden;
+	flex-shrink: 0;
+	width: 2em;
+	height: 2em;
+	background-color: #e8e8e8;
+	padding: 0.5em;
+	margin-right: 0.5em;
+}
+
+.characters-thumb img {
+	display: block;
+	width: 100%;
+	height: auto;
 }
 
 @media all and (max-width: 1000px) {
@@ -199,14 +148,7 @@ div > span > .card {
 		width: 100%;
 		height: 100%;
 	}
-	.card {
-		width: 90%;
-	}
-	.node {
-		overflow-x: scroll;
-		width: 100%;
-	}
-	div > span > .card {
+	.characters li {
 		width: 90%;
 	}
 }
